<resources>
    <string name="app_name">Challenge</string>
    <string name="address">Address</string>
    <string name="office">Office</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="end_date">End Date</string>
    <string name="gender">Gender</string>
    <string name="sort_name">Sort Name</string>
    <string name="website">Website</string>
</resources>