<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_Background_color"
    >
<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/detail_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:translationZ="90dp"
            android:layout_centerHorizontal="true"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="7dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="2dp"
            android:layout_margin="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:id="@+id/detail_name"
                    android:layout_height="wrap_content"
                     />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:id="@+id/senator_link"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_name"
                     />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/senator_link"
                    android:orientation="horizontal"
                    android:id="@+id/info"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="Bio Guide Id"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/detail_bioguididd"                            android:gravity="center"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="Party"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/detail_party"
                            android:gravity="center"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_below="@+id/info"
                    android:orientation="horizontal"
                    android:layout_height="50dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:src="@drawable/email"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:src="@drawable/message"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:src="@drawable/call"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:textColor="@color/black"
    android:text="@string/address"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_address"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/office"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_office"
            android:padding="4dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_name_info"
            android:padding="4dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/birthday"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_birthday"
            android:padding="4dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/end_date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_enddate"
            android:padding="4dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/gender"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_gender"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/sort_name"/>

        <TextView
            android:id="@+id/detail_sort_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/black"
            android:text="@string/website"/>

        <TextView
            android:id="@+id/detail_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />

    </LinearLayout>

</LinearLayout>
    </ScrollView>